@@ -1,7 +1,8 @@
 2018-10-06  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
 	* dvispc.c: Change option handling for future extensions.
-	Make sure binary with trace does not fail tests.
+	Make sure binary with trace does not fail tests by
+	prioritizing outfile as an explicit argument.
 	* chkdvifont.man, dvispc.man: New man pages.
 	* Makefile.am: Adjusted.
 	* configure.ac: Version 20181006.
